--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_TITLE= City Explorer
 REACT_APP_CITY_KEY= pk.bd985e4e701a5b53341ec9e721b6098a
 WEATHER_API_KEY=e670d44efa7442a79c513c79cfd591dd	
+URL = https://odat-city.herokuapp.com
